faculty pubs tweaks

--- a/pubs-by-author.html
+++ b/pubs-by-author.html
@@ -11,8 +11,8 @@ title: Publications - Dept of Mathematics, IISc
 <div class="row">
 
   <div class="col-md-12">
-    <h2> Publications (by author) </h2>
-    <p>Note that these are only the publications by current faculty members of the department since they joined the department.</p>
+    <h2> Faculty Publications (by author) </h2>
+    <p class="lead"> <strong>Note:</strong> These are the publications by current faculty members of the department <em>after</em> they joined the department.</p>
 
 {% assign years = site.data.pubs | group_by: "year" | sort: 'name' | reverse %}
 
