--- a/seminars-all.html
+++ b/seminars-all.html
@@ -43,6 +43,7 @@ title: Seminars
 <div class="" id = "tables">
   <h3>By Year</h3>
   <ul>
+    <li><a href="SeminarsByYear/Seminars2019.html">2019</a></li>
     <li><a href="SeminarsByYear/Seminars2018.html">2018</a></li>
     <li><a href="SeminarsByYear/Seminars2017.html">2017</a></li>
     <li><a href="SeminarsByYear/Seminars2016.html">2016</a></li>
