--- a/inspire.html
+++ b/inspire.html
@@ -24,6 +24,9 @@ title: INSPIRE Fellows and DST Scientists
         <div>
           <strong>UserID:</strong> {{stu.user-id}}
         </div>
+        <div>
+          <strong>Position:</strong> {{stu.position}}
+        </div>
       </div>
     </td>
     <td>
