--- a/postdocs.html
+++ b/postdocs.html
@@ -22,6 +22,9 @@ title: Postdocs
         <div>
           <strong>UserID:</strong> {{stu.user-id}}
         </div>
+        <div>
+          <strong>Fellowship:</strong> {{stu.position}}
+        </div>
       </div>
     </td>
     <td>
