--- a/tex/Seminars2018.html
+++ b/tex/Seminars2018.html
@@ -2,6 +2,10 @@
 title: Seminars - 2018
 layout: blank
 ---
-
+<html>
+    <body>
 {% assign current="2018" %}
 {% include seminar-tex.html %}
+            
+    </body>
+</html>
