--- a/tex/Seminars2019.html
+++ b/tex/Seminars2019.html
@@ -1,7 +1,11 @@
 ---
-title: Seminars - 2018
+title: Seminars - 2019
 layout: blank
 ---
-
+<html>
+    <body>
 {% assign current="2019" %}
 {% include seminar-tex.html %}
+            
+    </body>
+</html>
