--- a/tex/students-tex.html
+++ b/tex/students-tex.html
@@ -23,7 +23,7 @@ layout: blank
 \endhead
 {% for y in years %}{% assign list = y.items | sort: 'name' %}{% for stu in list %}
 &&&& \\[-4mm]
-{{ sl }} & {{ stu.name }} & {{ y.name }}  & "yet to decide" & IISc \\[1mm]\hline
+{{ sl }} & {{ stu.name }} & {{ y.name }}  & yet to decide & IISc \\[1mm]\hline
 %{% assign sl = sl | plus: 1 %}{% endfor %}{% endfor %}
 \end{longtable}
 \end{center}
@@ -47,7 +47,7 @@ layout: blank
 \endhead
 {% for y in years %}{% assign list = y.items | sort: 'name' %}{% for stu in list %}
 &&&& \\[-4mm]
-{{ sl }} & {{ stu.name }} & {{ y.name }}  & "yet to decide" & IISc \\[1mm]\hline
+{{ sl }} & {{ stu.name }} & {{ y.name }}  & yet to decide & IISc \\[1mm]\hline
 %{% assign sl = sl | plus: 1 %}{% endfor %}{% endfor %}
 \end{longtable}
 \end{center}
