--- a/course-list.html
+++ b/course-list.html
@@ -12,6 +12,8 @@ title: Courses
 {% assign semester = site.data.courses.aug2019 %}
 <h2 class="text-center">Courses for the semester August-December 2019</h2>
 
+<p class="lead"> For the <strong>first lecture date</strong> and other details please see the <a href="{{site.baseurl}}/course-schedule.html">Course Schedule</a>.</p>
+
 {% include semester-courses.html %}
 
 </div>
