postdoc research areas

--- a/postdocs.html
+++ b/postdocs.html
@@ -19,6 +19,9 @@ title: Postdocs
         {{ stu.name }}
         {% endif %}
       </div>
+      <div>
+        <strong>Research Areas:</strong> {{stu.research-area}}
+      </div>
         <div>
           <strong>UserID:</strong> {{stu.user-id}}
         </div>
