--- a/eigenfunctions-seminar.html
+++ b/eigenfunctions-seminar.html
@@ -3,6 +3,11 @@ title: Eigenfunctions Seminars
 ---
 
 <h3>Eigenfunctions</h3>
+
+<ul>
+  <li> <strong>Eigen (German):</strong> own.</li>
+  <li><strong>Function: </strong> an official or social occasion.</li>
+</ul>
     {% assign sorted = site.seminars | sort: 'date' | reverse %}
 
 {% for sem in sorted  %}
