--- a/seminars-all.html
+++ b/seminars-all.html
@@ -14,6 +14,9 @@ title: Seminars
     {% if sem.series %}<a
     href="{% if sem.website %}{{ sem.website }}#{{ sem.date | date: "%Y-%m-%d" }}{% else %}{{ sem.series | slugify }}.html#{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}{% endif %}" class="{{ sem.series | slugify }}"
     >{{ sem.series-prefix }} {{sem.series}}{% if sem.series-suffix %} {{sem.series-suffix}}{% endif %}: </a>{% endif %}
+    {% if sem.slides %}
+    <a href="{{ site.baseurl }}/seminar-slides/{{ sem.date | date: "%Y" }}/{{ sem.slides }}" target="_blank" class="pull-right btn btn-info">Slides</a>
+    {% endif %}
     <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a> </h5>
  <h5>  <strong>Speaker: </strong> {{sem.speaker}} </h5>
   <h5>  <strong>Date: </strong>{{ sem.date | date: "%a, %d %b %Y" }} </h5>
@@ -32,10 +35,10 @@ title: Seminars
   {% assign counter=counter | plus: 1 %}
     {% if lecture.slides %}
     <div>
-    <a href="{{ site.baseurl }}/seminar-slides/{{ page.date | date: "%Y" }}/{{ page.slides }}" target="_blank" class="pull-right btn btn-info">Slides</a>
+    <a href="{{ site.baseurl }}/seminar-slides/{{ page.date | date: "%Y" }}/{{ lecture.slides }}" target="_blank" class="pull-right btn btn-info">Slides</a>
     {% endif %}
   <h5><strong> Lecture {{ counter }}: </strong> {{ lecture.title }}</h5>
-    <p><strong> Abstract: </strong> {{ lecture.abstract }}</p>
+    <h5><strong> Abstract: </strong></h5> {{ lecture.abstract }}
   </div>
   {% endfor %}
   {% endif %}
