--- a/eigenfunctions-seminar.html
+++ b/eigenfunctions-seminar.html
@@ -33,6 +33,7 @@ title: Eigenfunctions Seminars
     {% endif %}
   </h5>
   {% if sem.lectures %}{% assign counter = 0 %}
+  <p>&nbsp;</p>
   {% for lecture in sem.lectures %}
   {% assign counter=counter | plus: 1 %}
     {% if lecture.slides %}
