--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <div class="row">
   <div class="col-md-8">
+    <p>&nbsp;</p>
     <img src="department.jpg" alt="" width="100%">
+    <p>&nbsp;</p>
     <div class="row">
   <div class="col-md-6 text-justify">
     <h3>Research</h3>
@@ -62,9 +64,9 @@
 </div>
 
   <div class="col-md-4">
-    <h3 style="text-align:center"> <a href="seminars-all.html">Seminars</a></h3>
+      <p>&nbsp;</p>
+    <h3 class="text-center"> <a href="seminars-all.html">Seminars</a></h3>
 
-<br>
 <ul>
 
   {% assign sorted = site.seminars | sort: 'date' | reverse %}
@@ -139,7 +141,7 @@
 
   </div>
   <div class="col-md-12">
-  <div style="float : right; bottom : 0;">
+  <div class="text-right">
    <a href="funding_agen.html">Supported by UGC and DST</a>
   </div>
 </div>
