--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,8 @@
 ---
+title: Contact
 ---
-<div style="float: left">
+<div class="row">
+<div class="col-md-4">
               <p>Please contact us through any of the following means.
               </p>
               <address>
@@ -20,7 +22,8 @@ chairman.math[at]iisc[dot]ac[dot]in
   <a href="mailto:webmaster.math@iisc.ac.in">Contact
               the Administrator</a>
 </div>
-<div style="float: right">
-<iframe width="600" height="450" frameborder="0" style="border:0"
+<div class="col-md-8">
+<iframe width="100%" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/search?q=JRD%20Tata%20Memorial%20Library%2C%20Bengaluru%2C%20Karnataka%2C%20India%20to%20Department%20of%20Mathematics%20IISc&key=AIzaSyDkU7zJXxLGK4rnqQu3iL0LP-vqQ3ANIQQ" allowfullscreen></iframe>
+</div>
 </div>
