--- a/phd-alumni.html
+++ b/phd-alumni.html
@@ -11,7 +11,7 @@ title: Ph.D. Degrees Awarded
 
  <ul class="list-inline">
    {% for y in sorted %}
-   <li> <a href="#{{y.name}}"> {{y.name}} </a> </li>
+   <li class="list-inline-item"> <a href="#{{y.name}}"> {{y.name}} </a> </li>
    {% endfor %}
  </ul>
 
