--- a/pubs-by-author.html
+++ b/pubs-by-author.html
@@ -47,7 +47,7 @@ title: Faculty Publications (by author) - Dept of Mathematics, IISc
   {% endfor %}
   {% endfor %}
   {% if recent %}
-  <p> <strong>Note:</strong> {{ fac.name}} has joined the department recently. Only publications publcations with affiliation the department are shown.</p>
+  <p> <strong>Note:</strong> {{ fac.name}} has joined the department recently. Only publications with affiliation the department are shown.</p>
   {% endif %}
   </ol>
 </div>
