--- a/research-areas.html
+++ b/research-areas.html
@@ -13,8 +13,8 @@ title: Research Areas
          <p>Derivation modules of curves and hypersurfaces, monomial curves, complete intersections and set-theoretic complete intersections, intersection theory of algebraic varieties. Schemes over symmetric monoidial categories, bivariant Chow theory. Hochschild and cyclic cohomology.</p></li>
     <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation Theory (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>, <a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
          <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups. Representations of Lie algebras: semisimple, Kac&ndash;Moody, Borcherds, and current algebras; quantum groups; algebras with triangular decomposition. </p></li>
-    <li><h4 id="number-theory-soumya-das"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4>
-        <p>Automorphic forms and representations, L-functions, Analytic Number theory.</p></li>
+    <li><h4 id="number-theory-soumya-das"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>, <a href="http://math.iisc.ac.in/~maheshkakde/">Mahesh Kakde</a>, <a href="http://math.iisc.ac.in/~radhikag/">Radhika Ganapathy</a>)</h4>
+        <p>Automorphic forms and representations, Galois representations, L-functions, Iwasawa theory, Arithmetic Geometry, Analytic Number theory, Algebraic K-theory.</p></li>
   </ul>
 </p>
 
@@ -24,7 +24,7 @@ title: Research Areas
     <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupathi Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>)</h4>
         <p> Homogenization of partial differential equations, controllability, viscosity solutions. Numerical methods for partial differential equations.</p> </li>
     <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharyya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
-        <p> Hilbert modules, multivariable operator theory, holomorphic-geometry methods for the study of commuting operator tuples.</p></li>
+        <p> Hilbert modules, multivariable operator theory, complex geometry.</p></li>
     <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>, <a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>)</h4>
         <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non-compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
     <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices and functions operating on them, positivity preservation, structured matrices.</p></li>
