--- a/faculty.html
+++ b/faculty.html
@@ -3,39 +3,48 @@ title: Faculty Members
 ---
 
 <div class="col-md-12">
-<h2>Faculty members</h2>
+  <h2>Faculty members</h2>
 
-<h4>Alphabetically by last name</h4>
+  <h4>Alphabetically by last name</h4>
 
   <p><b>To send email: <font face="Courier New" size="3">UserID[at]iisc.ac.in</font></b></p>
 
-<table class="table table-striped">
-  {% for fac in site.data.faculty %}
-  <tr>
-    <td class="col-md-7"><div><h4>
-      <a href=
-      "{% if fac.website %}{{ fac.website }}{% else %}http://math.iisc.ac.in/~{{fac.user-id}}/{% endif %}">
-        {{ fac.name }}</a> (Ph.D., {{ fac.phd }})<h4> </div>
-	<div class="">
-	 {{fac.chair}}
-	</div>
-      <div class="">
-        <strong>Research areas :</strong> {{ fac.research-areas}}
-      </div>
-      <div class="">
-        <div>
-          <strong>Phone :</strong> +91-80 2293 {{ fac.phone-ext}}
+  <table class="table table-striped">
+    {% for fac in site.data.faculty %}
+    <tr>
+      <td>
+        <div class="row">
+          <div class="col-md-10">
+            <div>
+              <h4>
+                <a
+                  href="{% if fac.website %}{{ fac.website }}{% else %}http://math.iisc.ac.in/~{{fac.user-id}}/{% endif %}">
+                  {{ fac.name }}</a> (Ph.D., {{ fac.phd }})<h4>
+            </div>
+            <div class="">
+              {{fac.chair}}
+            </div>
+            <div class="">
+              <strong>Research areas :</strong> {{ fac.research-areas}}
+            </div>
+            <div class="">
+              <div>
+                <strong>Phone :</strong> +91-80 2293 {{ fac.phone-ext}}
+              </div>
+              <div>
+                <strong>Office :</strong> Room {{ fac.office}}
+              </div>
+              <div>
+                <strong>UserID :</strong> {{fac.user-id}}
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-2" height="100"><img class="img-fluid"
+              src="{{site.baseurl}}/images/fac-{{fac.user-id}}.jpg" /></div>
         </div>
-        <div>
-          <strong>Office :</strong> Room {{ fac.office}}
-        </div>
-        <div>
-          <strong>UserID :</strong> {{fac.user-id}}
-        </div>
-      </div>
-    </td>
-    <td><img class="col-md-3 pull-right img-responsive" src="{{site.baseurl}}/images/fac-{{fac.user-id}}.jpg"></td>
-  </tr>
-  {%  endfor %}
-</table>
+      </td>
+    </tr>
+    {%  endfor %}
+  </table>
 </div>
