--- a/seminars-all.html
+++ b/seminars-all.html
@@ -34,13 +34,15 @@ title: Seminars
   <p>&nbsp;</p>
   {% for lecture in sem.lectures %}
   {% assign counter=counter | plus: 1 %}
+  <div>
     {% if lecture.slides %}
-    <div>
+    
     <a href="{{ site.baseurl }}/seminar-slides/{{ page.date | date: "%Y" }}/{{ lecture.slides }}" target="_blank" class="pull-right btn btn-info">Slides</a>
     {% endif %}
   <h5><strong> Lecture {{ counter }}: </strong> {{ lecture.title }}</h5>
-    <h5><strong> Abstract: </strong></h5> {{ lecture.abstract }}
+  {% if lecture.abstract %}<h5><strong> Abstract: </strong></h5> {{ lecture.abstract }}{% endif %}
   </div>
+  <p>&nbsp;</p>
   {% endfor %}
   {% endif %}
     {{ sem.content }}
