careers page fixed

--- a/career.html
+++ b/career.html
@@ -8,11 +8,11 @@ title: Careers in Mathematics
 
 			  </p>
 		    <ul>
-			<li><a href="http://businessweek.com/print/magazine/content/06_04/b3968001.htm?chan=g1" target="_blank">Math Will Rock Your World
+			<li><a href="https://www.bloomberg.com/news/articles/2006-01-22/math-will-rock-your-world" target="_blank">Math Will Rock Your World
 			</a><br>
 			<br>
             </li>
-		    <li><a href="http://www.math.iisc.ernet.in/kpo.pdf" target="_blank">Math Ph.D.'s in Demand
+		    <li><a href="{{ site.baseurl }}/kpo.pdf" target="_blank">Math Ph.D.'s in Demand
 		    </a><br>
 			<br>
 			<p> Given the strength of the Department in both pure and applied mathematics,
