old courses partial cleanup

--- a/course-list.html
+++ b/course-list.html
@@ -33,18 +33,4 @@ title: Courses
 
 </div>
 
-<div>
-<p style="margin-top: 40px">
- <h2>Earlier semesters</h2>
- <ul>
-   <li><a href="courses2017-18.html"> Academic Year 2017-18</a></li>
-    <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
-    <li> <a href="courses2015AD.html"> August-December 2015</a></li>
-    <li> <a href="courses2015JA.html">January-April 2015</a></li>
-    <li> <a href="courses2014AD.html"> August-December 2014</a></li>
-    <li> <a href="courses2014JA.html"> January-April 2014</a></li>
-    <li> <a href="courses2013AD.html"> August-December 2013</a></li>
-    <li> <a href="coursesold.html"> Earlier courses</a></li>
- </ul>
-</p>
-</div>
+{% include earlier-semesters.html %}
