--- a/courses2015AD.html
+++ b/courses2015AD.html
@@ -10,149 +10,6 @@
             </td>
 
             <td valign="top" >
-		<!--	<p><font color="#CC6600"><b>Jan</b></font><b><font color="#cc6600">
-            - July 2010</font></b><br>
-            </p>
-           <table class="table">
-              <tbody>
-                <tr bgcolor="#f0f0f0" valign="top">
-                  <td colspan="4" height="20"><b>Core courses for Integrated Ph.D. in
-                  Mathematical Sciences I<sup>st</sup> Year</b></td>
-                </tr>
-                <tr>
-                  <td width="100" height="19"><font color="#990000">Course No. </font></td>
-                  <td width="60" height="19"><font color="#990000">Credits </font></td>
-                  <td width="160" height="19"><font color="#990000">Course Title </font></td>
-                  <td width="200" height="19"><font color="#990000">Instructor</font></td>
-                </tr>
-                <tr>
-                  <td width="100" height="20">MA 222</td>
-                  <td width="60" height="20">3:0</td>
-                  <td width="140" height="20"><a href="courses/jan-july2010/Analysis-II.htm" target="_blank">
-                  Analysis II</a> </td>
-                  <td width="200" height="20">
-                  T. Bhattacharyya</td>
-                </tr>
-                <tr>
-                  <td width="100" height="23">MA 224</td>
-                  <td width="60" height="23">3:0</td>
-                  <td width="140" height="23"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/com-analysis.htm" target="_blank">
-                  Complex Analysis</a> </td>
-                  <td width="200" height="23">
-                  Gautam Bharali</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 229</td>
-                  <td width="60" height="19">3:0</td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/cal-manifols.htm" target="_blank">
-                  Calculus on manifolds</a> </td>
-                  <td width="200" height="19">
-                  Kaushal Verma</td>
-                </tr>
-                <tr>
-                  <td width="100" height="38">MA 241</td>
-                  <td width="60" height="38">3:0</td>
-                  <td width="140" height="38"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/diff-equs.htm" target="_blank">
-                  Ordinary Differential Equations</a></td>
-                  <td width="200" height="38">
-                  M. K. Ghosh</td>
-                </tr>
-        		    </tbody>
-		   </table>
- <br>
-
-<table class="table">
-              <tbody>
-                <tr bgcolor="#f0f0f0" valign="top">
-                  <td colspan="4" height="39"><b>Elective Courses: </b></td>
-                </tr>
-                <tr>
-                  <td width="100" height="20">MA 213</td>
-                  <td width="60" height="20">3:0</td>
-                  <td width="140" height="20"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/Algebra-II.htm" target="_blank">
-                  Algebra II* </a></td>
-                  <td width="200" height="20">
-                  S. Viswanath</td>
-                </tr>
-		 <tr>
-                  <td width="100" height="19">MA 361</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/prabability.htm" target="_blank">
-                  Probability Theory* </a>
-                  </td>
-                  <td width="200" height="19"> Manjunath Krishnapur</td>
-                </tr>
-				 <tr>
-                  <td width="100" height="24">MA 323</td>
-                  <td width="60" height="24">3:0 </td>
-                  <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/oper-theory.htm" target="_blank">
-                  Operator Theory</a></td>
-                  <td width="200" height="24">
-                  E. K. Narayanan</td>
-                </tr>
-		 <tr>
-                  <td width="100" height="24">MA 325</td>
-                  <td width="60" height="24">3:0 </td>
-                  <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/courses2001/op_theory2.htm" target="_blank">
-                  Operator Theory II</a></td>
-                  <td width="200" height="24">
-                  T.Bhattacharyya</td>
-                </tr>
-
-                <tr>
-                  <td width="100" height="25">MA 332</td>
-                  <td width="60" height="25">3:0 </td>
-                  <td width="140" height="25"><a href="http://www.math.iisc.ernet.in/~gadgil/AlgTop.html" target="_blank">Algebraic Topology</a></td>
-                  <td width="200" height="25"> Siddhartha Gadgil</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 333</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/rieman-geom.htm" target="_blank">
-                  Riemannian Geometry</a></td>
-                  <td width="200" height="19"> Hemangi Shah</td>
-                </tr>
-	        <tr>
-                  <td width="100" height="19">MA 336</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/top-riem.htm" target="_blank">
-                 Topics in Riemannian Geometry</a></td>
-                  <td width="200" height="19"> Harish Seshadri</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 337</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/comp-assis.htm" target="_blank">
-                 Computer Assisted Topology and Geometry</a></td>
-                  <td width="200" height="19"> Siddhartha Gadgil</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 347</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/pdeandfem.htm" target="_blank">
-                 Advanced PDE and FEM</a></td>
-                  <td width="200" height="19"> A. K. Nandakumaran</td>
-                </tr>
-
-                <tr>
-                  <td width="100" height="19">MA 364</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/linear-non.htm" target="_blank">
-                 Linear and Nonlinear Time Series Analysis</a></td>
-                  <td width="200" height="19"> G.Rangarajan</td>
-                </tr>
-
-                <tr>
-                  <td width="100" height="19">MA 391</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-july2010/spec-algor.htm" target="_blank">
-                 Spectral Algorthms</a></td>
-                  <td width="200" height="19"> Ravi Kannan/G.Rangarajan</td>
-                </tr>
-
-			  </tbody>
-		   </table><br>
-                  <p>* Soft core for Integrated Ph.D. I<sup>st</sup> Year students.</p>-->
 
              <p> <b><font color="#cc6600">August - December 2015</font></b></p>
             <table class="table">
@@ -298,147 +155,9 @@ in Mathematical Sciences
            <p>&nbsp;
 
            </p>
-           <ul>
-		   <li><a href="coursesold.html" target="_blank">Courses offered since 2001</a><br>
-		   <li><a href="courses2013AD.html" target="_blank">Courses list of 2013 (Aug - Dec)</a><br>
-		   <li><a href="courses2014JA.html" target="_blank">Courses list of 2014 (Jan - Apr)</a><br>
-		   <li><a href="courses2014AD.html" target="_blank">Courses list of 2014 (Aug - Dec)</a><br>
-		   <li><a href="courses2015JA.html" target="_blank">Courses list of 2015 (Jan - Apr)</a><br>
-
-                   <br>
-
-		   </li>
-
-			</ul>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <table align="center" border="0" cellpadding="4" cellspacing="0" width="778">
-        <tbody>
-          <tr align="center" bgcolor="#ffffff">
-            <td colspan="3">
-            <hr> </td>
-          </tr>
-          <tr align="center" bgcolor="#ffffff" valign="top">
-            <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian Institute of Science</a></td>
-            <td width="260"><a href="mailto:surender@iisc.ac.in">Contact
-the Administrator</a></td>
-            <td><a href="http://www.math.iisc.ernet.in/disclaimer.htm">Disclaimer</a></td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
+           
+            
 </center>
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
 
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
+{% include earlier-semesters.html %}
 
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-  </script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
