--- a/courses2015JA.html
+++ b/courses2015JA.html
@@ -106,148 +106,4 @@
            <p>&nbsp;
 
            </p>
-           <ul>    <li><a href="http://www.math.iisc.ernet.in/coursesold.htm" target="_blank">Courses offered since 2001</a><br>
-                   <li><a href="http://www.math.iisc.ernet.in/courses20100.htm" target="_blank">Courses list of 2010 - 2011</a><br>
-		   <li><a href="http://www.math.iisc.ernet.in/courses2012JA.htm" target="_blank">Courses list of 2012 (Jan - Apr)</a><br>
-		   <li><a href="http://www.math.iisc.ernet.in/courses2012AD.htm" target="_blank">Courses list of 2012 (Aug - Dec)</a><br>
-		   <li><a href="http://www.math.iisc.ernet.in/courses2013AD.htm" target="_blank">Courses list of 2013 (Aug - Dec)</a><br>
-		   <li><a href="http://www.math.iisc.ernet.in/courses2014JA.htm" target="_blank">Courses list of 2014 (Jan - Apr)</a><br>
-
-		   <li><a href="http://www.math.iisc.ernet.in/courses2014AD.htm" target="_blank">Courses list of 2014 (Aug - Dec)</a><br>
-                   <br>
-
-		   </li>
-
-			</ul>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <table align="center" border="0" cellpadding="4" cellspacing="0" width="778">
-        <tbody>
-          <tr align="center" bgcolor="#ffffff">
-            <td colspan="3">
-            <hr> </td>
-          </tr>
-          <tr align="center" bgcolor="#ffffff" valign="top">
-            <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian Institute of Science</a></td>
-            <td width="260"><a href="mailto:sysadmin@iisc.ac.in">Contact
-the Administrator</a></td>
-            <td><a href="http://www.math.iisc.ernet.in/disclaimer.htm">Disclaimer</a></td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</center>
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-  </script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
-
-<script language="JavaScript">
-<!--
-var SymRealOnLoad;
-var SymRealOnUnload;
-
-function SymOnUnload()
-{
-  window.open = SymWinOpen;
-  if(SymRealOnUnload != null)
-     SymRealOnUnload();
-}
-
-function SymOnLoad()
-{
-  if(SymRealOnLoad != null)
-     SymRealOnLoad();
-  window.open = SymRealWinOpen;
-  SymRealOnUnload = window.onunload;
-  window.onunload = SymOnUnload;
-}
-
-SymRealOnLoad = window.onload;
-window.onload = SymOnLoad;
-
-//-->
-</script>
+           {% include earlier-semesters.html %}
