--- a/courses2016-17.html
+++ b/courses2016-17.html
@@ -11,4 +11,4 @@ title: Courses for 2016-17
 <!-- <div class="col-md-8 col-offset-md-1"> -->
 <h3 class="text-center">Courses for the semester January-April 2017</h3>
 
-{% include semester-courses.html %}
+{% include semester-courses.html %}{% include earlier-semesters.html %}
