--- a/computerfaqs.html
+++ b/computerfaqs.html
@@ -8,5 +8,5 @@ title: Computer FAQs
   <li><a href = "{{ site.baseurl }}/sshinfo.html"> How can I access the IISc network from outside ? </a></li>
 <li><a href = "{{ site.baseurl }}/makewebpage.html">How can I make a webpage hosted on the maths server ? </a></li>
 <li><a href = "{{ site.baseurl }}/gmailalias.html"> Can one forward one's iisc email to some other service (e.g. gmail)? </a></li>
-<li> <a href="{{ site.baseurl }}/docs/"> How do I update, correct and/or maintain some page on this web site? </a></li>
+<li> <a href="{{ site.baseurl }}/docs/index.html"> How do I update, correct and/or maintain some page on this web site? </a></li>
  </ul>
