--- a/courses2013AD.html
+++ b/courses2013AD.html
@@ -1,130 +1,12 @@
 ---
+title: Courses for August-December 2013
 ---
-<center>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            </td>
 
-            <td valign="top" >
+{% assign list = site.data.oldcourses.aug2013 %}
+<h3 class="text-center">Courses for the semester August-December 2013</h3>
+
+{% include old-semester-course.html %}
 
 
-            <p> <b><font color="#cc6600">August - December 2013</font></b></p>
-            <table class="table">
-              <tbody>
-                <!--<tr>
-                  <td colspan="4" height="20" bgcolor="#F0F0F0"><b>Core courses for Integrated Ph.D.
-in Mathematical Sciences I<sup>st</sup> Year</b></td>
-                </tr>-->
-                <tr>
-                  <td width="100" height="19"><font color="#990000">Course No. </font></td>
-
-                  <td width="140" height="19"><font color="#990000">Course Title </font></td>
-                  <td width="200" height="19"><font color="#990000">Instructor</font></td>
-                </tr><tr>
-                  <td height="19" width="100">MA 210 </td>
-
-                  <td height="19" width="140">
-                  <a href="courses/p-adic.html" target="_blank">p-adic Analysis Compared with Real</a> </td>
-                  <td height="19" width="200">Pooja Singla</td>
-                </tr>
-                <tr>
-                  <td height="19" width="100">MA 212</td>
-
-                  <td height="19" width="140"><a href="courses/algebra.html" target="_blank">Algebra</a> </td>
-                  <td height="19" width="200">
-                  <p class="MsoNormal">Mousumi Mandal </p></td>
-                </tr>
-                <tr>
-                  <td height="19" width="100">MA 215 </td>
-
-                  <td height="19" width="140"><a href="http://www.math.iisc.ac.in/courses/modular.htm" target="_blank">Introduction to Modular Forms</a>
-                  </td>
-                  <td height="19" width="200">Soumya Das </td>
-                </tr>
-                <tr>
-				 <td height="12" width="100">MA 219</td>
-
-				 <td height="12" width="140"><a href="courses/aug-dec2006/linear-algebra.html" target="_blank">Linear  Algebra </a> </td>
-				 <td height="12" width="200">E. K. Narayanan </td>
-				 </tr>
-                <tr>
-				 <td height="25" width="100">MA 221</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/aug-dec2007/analysis1.htm" target="_blank">Real Analysis</a></td>
-				 <td height="18" width="200">Pooja Singla </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 223</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/aug-dec2009/fun_analysis.htm" target="_blank">Functional Analysis</a></td>
-				 <td height="18" width="200">Gadadhar Misra </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 231</td>
-
-				 <td height="25" width="140"><a href="courses/courses2001/topology.html" target="_blank">Topology</a></td>
-				 <td height="18" width="200">Basudeb  Datta </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 232</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/aug-dec2009/into_algebra.htm" target="_blank">Introduction to Algebraic Topology</a></td>
-				 <td height="18" width="200">Basudeb  Datta </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 234</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/mgsg.htm" target="_blank">Metric Geometry of Spaces and  Groups</td>
-				 <td height="18" width="200">Siddhartha Gadgil </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 242</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/aug-dec2009/pde.htm" target="_blank">Partial Differential Equations</a></td>
-				 <td height="18" width="200">Thirupathi Gudi </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 261</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/aug-dec2009/probability.htm" target="_blank">Probability  Models</a></td>
-				 <td height="18" width="200"> M. K. Ghosh / S. K. Iyer</td>
-				 </tr>
-                                 <tr>
-				 <td height="25" width="100">MA 321</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/analysisIII.htm" target="_blank">Analysis III</a></td>
-				 <td height="18" width="200">A. K. Nandakumaran /  R Dhayna </td>
-				 </tr>
-
-				 <tr>
-				 <td height="25" width="100">MA 326</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/jan-july2008/fourier_analysis.htm" target="_blank">Fourier Analysis</a></td>
-				 <td height="18" width="200"> Thangavelu </td>
-				 </tr>
-				 <tr>
-				 <td height="25" width="100">MA 338</td>
-
-				 <td height="25" width="140"><a href="http://www.math.iisc.ac.in/courses/DMLG.htm" target="_blank">Differentiable Manifolds and Lie Groups</td>
-				 <td height="18" width="200">Thomas Richard / Harish Seshadri </td>
-				 </tr>
-				 </tbody>
-                &nbsp;</table>
-		<table border="1" bordercolor="#f0f0f0" cellpadding="2" cellspacing="1" width="0" height="0">
-             <tbody>
-               <tr bgcolor="#f0f0f0" valign="top">
-
-             </tbody>
-           </table>
-           <br>
-           <p>* Soft core for Integrated Ph.D. I<sup>st</sup> Year students.</p>
-           <p>&nbsp;
-
-           </p>
-           
-</center>
-{% include earlier-semesters.html %}
+ 
+           {% include earlier-semesters.html %}
