--- a/courses2015AD.html
+++ b/courses2015AD.html
@@ -1,163 +1,12 @@
 ---
+title: Courses for August-December 2015
 ---
-<center>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            </td>
 
-            <td valign="top" >
+{% assign list = site.data.oldcourses.aug2015 %}
+<h3 class="text-center">Courses for the semester August-December 2015</h3>
 
-             <p> <b><font color="#cc6600">August - December 2015</font></b></p>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td colspan="4" height="20" bgcolor="#F0F0F0"><b>Core courses for Integrated Ph.D.
-in Mathematical Sciences I<sup>st</sup> Year</b></td>
-                </tr>
-                <tr>
-                  <td width="100" height="19"><font color="#990000">Course No. </font></td>
-                  <td width="60" height="19"><font color="#990000">Credits </font></td>
-                  <td width="140" height="19"><font color="#990000">Course Title </font></td>
-                  <td width="200" height="19"><font color="#990000">Instructor</font></td>
-                </tr>
-
-                <tr>
-                  <td width="100" height="19">MA 212 </td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19">
-                  <a href="courses/aug-dec2015/Algebra-I.html" target="_blank">Algebra I</a> </td>
-                  <td width="200" height="19">Abhishek Banerjee</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 219</td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="courses/aug-dec2015/Linear_Algebra.html" target="_blank">Linear
-Algebra</a> </td>
-                  <td width="200" height="19">
-                  <p class="MsoNormal">Harish Seshadri </p></td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 221 </td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19"><a href="courses/aug-dec2015/Analysis_I_Real_Analysis.html" target="_blank">Analysis I: Real Anaysis</a>
-                  </td>
-                  <td width="200" height="19">S. Thangavelu </td>
-                </tr>
-                <tr>
-				 <td width="100" height="12">MA 231</td>
-			     <td width="60" height="12">3:0 </td>
-				 <td width="140" height="12"><a href="courses/aug-dec2015/Topology.html" target="_blank">Topology</a> </td>
-				 <td width="200" height="12">Siddhartha Gadgil</td>
-				 </tr>
-                <tr>
-				 <td width="100" height="25">MA 261</td>
-				 <td width="60" height="25">3:0 </td>
-				 <td width="140" height="25"><a href="courses/aug-dec2015/Probability_Models.html" target="_blank">
-                 Probability Models</a></td>
-				 <td width="200" height="18">Arvind Ayyer </td>
-				 </tr>
-              </tbody>
-             &nbsp;</table>
-            &nbsp;<table class="table">
-              <tbody>
-                <tr>
-                  <td colspan="4" bgcolor="#F0F0F0"><b>Core courses for Integrated Ph.D.
-in Mathematical Sciences
-                  II<sup>nd</sup> Year</b></td>
-                </tr>
-                <tr>
-                  <td width="100">MA 223</td>
-                  <td width="60">3:0 </td>
-                  <td width="140"><a href="courses/aug-dec2015/Functional_Analysis.html" target="_blank">Functional Analysis </a>
-                  </td>
-                  <td width="200">T. Bhattacharyya </td>
-                </tr>
-
-				<td width="100">MA 232</td>
-                  <td width="60">3:0 </td>
-                  <td width="140"><a href="courses/aug-dec2015/Introduction_to_Algebraic_Topology.html" target="_blank">
-                  Introduction to Algebraic Topology</a></td>
-                  <td width="200"> Basudeb Datta </td>
-                </tr>
-                <tr>
-                  <td width="100">MA 242</td>
-                  <td width="60">3:0</td>
-                  <td width="140"><a href="courses/aug-dec2015/Partial_Differential_Equations.html" target="_blank">Partial Differential Equations</a></td>
-                  <td width="200">Mrinal K. Ghosh</td>
-                </tr>
-
-				    <tr>
-
-                </tbody>
-                &nbsp;</table>
+{% include old-semester-course.html %}
 
 
-
-
-            &nbsp;<table class="table">
-              <tbody>
-
-                <tr bgcolor="#f0f0f0" valign="top">
-                  <td colspan="4"><b>Elective Courses</b></td>
-                </tr>
-
-               	<tr>
-                  <td width="100" height="19">MA 215 </td>
-                  <td width="60" height="19">3:0 </td>
-                  <td width="140" height="19">
-
-                   <a href="courses/aug-dec2015/Introduction_to_Modular_Forms.html" target="_blank">Introduction to Modular Forms</a> </td>
-
-                  <td width="200" height="19">Jaban Meher</td>
-                </tr>
-
-                  <tr>
-                  <td width="100">MA 277</td>
-                  <td width="60">3:0 </td>
-                  <td width="140"><a href="courses/aug-dec2015/Advanced_PDE_and_Finite_Element_Method.html" target="_blank">Advanced PDE and Finite Element Method</a>
-                  </td>
-                  <td width="200">Thirupathi Gudi</td>
-                </tr>
-
-
-                <tr>
-                  <td width="100" height="19">MA 361 </td>
-                  <td width="60" height="19">3:0</td>
-                  <td width="140" height="19">
-                 <a href="courses/aug-dec2015/Probability_Theory.html" target="_blank">Probability Theory </a>&nbsp; </td>
-                  <td width="200" height="19">Manjunath Krishnapur</td>
-                </tr>
-                <tr>
-                  <td width="100" height="19">MA 368</td>
-                  <td width="60" height="19">3:0</td>
-                  <td width="140" height="19"><a href="courses/aug-dec2015/Topics_in_probabilty_and_stochastic_processes.html" target="_blank">Topics in Probability and Stochastic Processes</a>&nbsp; </td>
-                  <td width="200" height="19">
-                 Manjunath Krishnapur</td>
-                </tr>
-
-				  <tr>
-                  <td width="100" height="19">MA 278</td>
-                  <td width="60" height="19">3:0</td>
-                  <td width="140" height="19"><a href="courses/aug-dec2015/Introduction_to_Dynamical_Systems.html" target="_blank">
-                  Introduction to Dynamical Systems Theory</a> </td>
-                  <td width="200" height="19">
-                  Govindan Rangarajan & Janaki Balakrishnan</td>
-                </tr>
-
-             </tbody>
-           </table>
-           <br>
-
-           <p>&nbsp;
-
-           </p>
-           
-            
-</center>
-
-{% include earlier-semesters.html %}
-
+ 
+           {% include earlier-semesters.html %}
