--- a/courses2015JA.html
+++ b/courses2015JA.html
@@ -1,109 +1,12 @@
 ---
+title: Courses for January-April 2015
 ---
 
+{% assign list = site.data.oldcourses.jan2015 %}
+<h3 class="text-center">Courses for the semester January-April 2015</h3>
 
-  <p><font color="#CC6600"><b>January</b></font><b><font color="#cc6600"> - April 2015</font></b><br>
-</p>
-		   <table class="table">
-             <tbody>
-               <tr bgcolor="#f0f0f0" valign="top">
-                 <td colspan="4" height="20"><b>Core courses for the Integrated Ph.D. programme in I<sup>st</sup> Year</b></td>
-               </tr>
-               <tr>
-                 <td width="100" height="19"><font color="#990000">Course No. </font></td>
-                 <td width="160" height="19"><font color="#990000">Course Title </font></td>
-                 <td width="200" height="19"><font color="#990000">Instructor</font></td>
-               </tr>
-              <!-- <tr>
-                 <td width="100" height="20">MA 213</td>
-				 <td width="140" height="20"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Representation_Theory_of_Finite_Groups.htm" target="_blank"> Representation Theory of Finite Groups</a> </td>
-                 <td width="200" height="20">Pooja Singla</td>
-               </tr>-->
-               <tr>
-                 <td width="100" height="23">MA 222</td>
-				 <td width="140" height="23"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Measure_Theory.htm" target="_blank">Measure Theory</a> </td>
-                 <td width="200" height="23">Harish Seshadri</td>
-               </tr>
-			   <tr>
-                 <td width="100" height="24">MA 224</td>
-                 <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Complex_Analysis.htm" target="_blank">Complex Analysis</a></td>
-                 <td width="200" height="24">Thangavelu</td>
-               </tr>
-
-               <tr>
-                 <td width="100" height="19">MA 229</td>
-                 <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Calculus_on_manifolds.htm" target="_blank"> Calculus on Manifolds</a> </td>
-                 <td width="200" height="19">Gadadhar Misra</td>
-               </tr>
-               <tr>
-                 <td width="100" height="38">MA 241</td>
-                 <td width="140" height="38"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Ordinary_Differential_Equation.htm" target="_blank"> Ordinary Differential Equations</a></td>
-                 <td width="200" height="38">A. K. Nandakumaran</td>
-               </tr>
-             </tbody>
-           </table>
-		   <br>
-           <table class="table">
-             <tbody>
-               <tr bgcolor="#f0f0f0" valign="top">
-                 <td colspan="4" height="20"><b>Elective Courses: </b></td>
-               </tr>
-               <tr>
-                 <td width="100" height="20">MA 210</td>
-                 <td width="140" height="20"><a href="http://siddhartha-gadgil.github.io/LogicTypesSpaces/home/" target="_blank"> Logic, Types and Spaces
-</a></td>
-                 <td width="200" height="20">Siddhartha Gadgil</td>
-               </tr>
-
-               <tr>
-                 <td width="100" height="20">MA 213</td>
-				 <td width="140" height="20"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Representation_Theory_of_Finite_Groups.htm" target="_blank"> Representation Theory of Finite Groups</a> </td>
-                 <td width="200" height="20">Pooja Singla</td>
-               </tr>
+{% include old-semester-course.html %}
 
 
-
-			  <tr>
-                 <td width="100" height="24">MA 312</td>
-                 <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Commutative_Algebra.htm" target="_blank">Commutative Algebra</a></td>
-                 <td width="200" height="24">D. P. Patil</td>
-               </tr>
-
-			    <tr>
-                 <td width="100" height="24"><p>MA 315</p> </td>
-                 <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Galois_Theory.htm" target="_blank">Galois Theory</a></td>
-                 <td width="200" height="24">Abhishek Banerjee</td>
-               </tr>
-
-                 <tr>
-                 <td width="100" height="19">MA 318</td>
-                 <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Combinatorics.htm" target="_blank">Combinatorics</a></td>
-                 <td width="200" height="19">Arvind Ayyer</td>
-               </tr>
-
-			   <tr>
-                 <td width="100" height="24">MA 332</td>
-                 <td width="140" height="24"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Algebraic_Topology.htm" target="_blank">Algebraic Topology</a></td>
-                 <td width="200" height="24">Divakaran D/Siddhartha Gadgil</td>
-               </tr>
-
-
-                <td width="100" height="19">MA 347</td>
-                  <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Advanced_PDE_and_Finite_Element_Method.htm" target="_blank">Advanced PDE and Finite Element  Method</a> </td>
-                  <td width="200" height="19">Thirupathi Gudi</td>
-                </tr>
-<tr>
-                 <td width="100" height="19">MA 361</td>
-                 <td width="140" height="19"><a href="http://www.math.iisc.ernet.in/courses/jan-apr2015/Probability_Theory.htm" target="_blank"> Probability Theory </a> </td>
-                 <td width="200" height="19">Manjunath Krishnapur</td>
-               </tr>
-
-
-             </tbody>
-           </table>
-           <br>
-
-           <p>&nbsp;
-
-           </p>
+ 
            {% include earlier-semesters.html %}
