links fixed; closes #56

--- a/faculty.html
+++ b/faculty.html
@@ -14,7 +14,7 @@ title: Faculty Members
     <tr>
       <td>
         <div class="row">
-          <div class="col-md-10">
+          <div class="col-md-10" id="{{ fac.user-id }}">
             <div>
               <h4>
                 <a
