--- a/research-areas.html
+++ b/research-areas.html
@@ -13,7 +13,7 @@ title: Research Areas
          <p>Derivation modules of curves and hypersurfaces, monomial curves, complete intersections and set-theoretic complete intersections, intersection theory of algebraic varieties. Schemes over symmetric monoidial categories, bivariant Chow theory. Hochschild and cyclic cohomology.</p></li>
     <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation Theory (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>, <a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>)</h4>
          <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups. Representations of Lie algebras: semisimple, Kac&ndash;Moody, Borcherds, and current algebras; quantum groups; algebras with triangular decomposition. </p></li>
-    <li><h4 id="number-theory-soumya-das-mahesh-kakde-radhika-ganapathy"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>, <a href="http://math.iisc.ac.in/~maheshkakde/">Mahesh Kakde</a>, <a href="http://math.iisc.ac.in/~radhikag/">Radhika Ganapathy</a>)</h4>
+    <li><h4 id="number-theory-soumya-das-mahesh-kakde-radhika-ganapathy"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>, <a href="http://math.iisc.ac.in/~maheshkakde/">Mahesh Kakde</a>, <a href="#">Radhika Ganapathy</a>)</h4>
         <p>Automorphic forms and representations, Galois representations, L-functions, Iwasawa theory, Arithmetic Geometry, Langlands programme, Analytic Number theory, Algebraic K-theory.</p></li>
   </ul>
 </p>
