--- a/research-areas.html
+++ b/research-areas.html
@@ -29,7 +29,7 @@ title: Research Areas
         <p> Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non-compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
     <li> <h4 id="matrix"> Positivity and Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4><p>Positive matrices/kernels and functions operating on them, (total) positivity preservation, structured matrices and kernels.</p></li>
     <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali-purvi-gupta">Several Complex Variables (<a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~purvigupta/">Purvi Gupta</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>)</h4>
-         <p> Holomorphic mappings, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems. Invariant metrics: estimates, metric geometry of hyperbolic domains. Convexity, finite-type domains. Pluripotential theory and holomorphic dynamical systems.</p></li></li>
+         <p> Holomorphic mappings, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems. Invariant metrics: estimates, metric geometry of hyperbolic domains. Domains in $\mathbb C^n$: convexity and finite-type conditions, optimal and random polyhedral approximations, integral representations and holomorphic function spaces. Convexity properties of real submanifolds in complex spaces. Pluripotential theory and holomorphic dynamical systems.</p></li></li>
   </ul>
 </p>
 
