--- a/research-areas.html
+++ b/research-areas.html
@@ -21,6 +21,8 @@ title: Research Areas
 <h3 id="analysis">Analysis</h3>
 <p>
   <ul>
+    <li><h4 id="calculus-of-variations-swarnendu-sil">Calculus of Variations (<a href="http://math.iisc.ac.in/~ssil/">Swarnendu Sil</a>)</h4>
+        <p> Existence and regularity and singularity of minimzers and/or critical points of possibly nonconvex, noncoercive functionals, weak continuity and weak lower semicontinuity, compensated compactness and concentration compactness, differential inclusions.</p> </li>
     <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi-swarnendu-sil">Differential Equations (<a href="http://math.iisc.ac.in/~gudi/">Thirupathi Gudi</a>, <a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>, <a href="http://math.iisc.ac.in/~ssil/">Swarnendu Sil</a>)</h4>
         <p> Homogenization of partial differential equations, controllability, viscosity solutions. Numerical methods for partial differential equations. Existence of regularity of nonlinear elliptic partial differential equations and systems.</p> </li>
     <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharyya</a>, <a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>)</h4>
@@ -50,7 +52,7 @@ Combinatorial aspects of simplicial complexes, Tessellation and tiling problems.
     <li> <h4 id="algebraic-and-combinatorial-topology-basudeb-datta"> Algebraic and Combinatorial Topology (<a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a>)</h4>
     <p> Combinatorial manifolds, PL-manifolds, minimal triangulation of manifolds, triangulation of spheres and projective planes with few vertices, pseudomanifolds with small excess, equivelar polyhedral maps.</p></li>
     <li><h4 id="differential-geometry-harish-seshadri-vamsi-pritham-pingali-subhojoy-gupta-ved-datar-swarnendu-sil">Differential Geometry and Geometric Analysis (<a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~harish/">Harish Seshadri</a>, <a href="http://math.iisc.ac.in/~vvdatar/">Ved Datar</a>, <a href="http://math.iisc.ac.in/~ssil/">Swarnendu Sil</a>)</h4>
-    <p> Manifolds of positive curvature, Einstein manifolds, conformal geometry, Teichm&uuml;ller theory, K&auml;hler geometry, complex Monge&ndash;Ampere type equations, special metrics on vector bundles, and degenerations of canonical metrics and connections. Higher dimensional Gauge theory, Yang&ndash;Mills equation, Harmonic, $p$-harmonic and polyharmonic maps.</p></li>
+    <p> Manifolds of positive curvature, Einstein manifolds, conformal geometry, Teichm&uuml;ller theory, K&auml;hler geometry, complex Monge&ndash;Ampere type equations, special metrics on vector bundles, and degenerations of canonical metrics and connections. Higher dimensional Gauge theory, Yang&ndash;Mills equation. Harmonic, $p$-harmonic and polyharmonic maps.</p></li>
     <li><h4 id="low-dimensional-topology-siddhartha-gadgil-subhojoy-gupta">Low Dimensional Topology (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
     <p> Topology of three-manifolds and smooth four-manifolds, hyperbolic geometry, geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p></li>
   </ul>
