--- a/research-areas.html
+++ b/research-areas.html
@@ -14,7 +14,7 @@ title: Research Areas
     <li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare"> Representation Theory (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>, <a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="https://sites.google.com/view/rvenkateshiisc/">R. Venkatesh</a>)</h4>
          <p>Representations of: finite groups and finite dimensional associative algebras; p-adic groups and other linear groups with entries from local rings; finitely generated discrete groups. Representations of Lie algebras: semisimple, Kac&ndash;Moody, Borcherds, and current algebras; quantum groups; algebras with triangular decomposition. </p></li>
     <li><h4 id="number-theory-soumya-das-shaunak-deo-mahesh-kakde-radhika-ganapathy"> Number Theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>, <a href="https://sites.google.com/view/shaunakdeo/">Shaunak Deo</a>, <a href="http://math.iisc.ac.in/~maheshkakde/">Mahesh Kakde</a>, <a href="#">Radhika Ganapathy</a>)</h4>
-        <p>Automorphic forms and representations, Galois representations, L-functions, Iwasawa theory, Arithmetic Geometry, Langlands programme, Analytic Number theory, Algebraic K-theory.</p></li>
+        <p>Automorphic forms (and their $p$-adic families) and representations, mod $p$ modular and Hilbert modular forms and their Hecke algebras, Galois representations, L-functions, Iwasawa theory, Arithmetic Geometry, Langlands programme, Analytic Number theory, Algebraic K-theory.</p></li>
   </ul>
 </p>
 
