--- a/exam-schedule-jan-2021.html
+++ b/exam-schedule-jan-2021.html
@@ -35,7 +35,7 @@ classes were conducted. If the instructor has used a mixed slot such as Monday 2
 <tr><td>    MWF 2; MWF 1.30‐3; MWF 2‐3.30</td><td> Wednesday : January 27 Forenoon </td></tr>
 <tr><td>    TTh 2; TTh 1.30‐3; TTh 2‐3.30</td><td> Wednesday : January 27 Afternoon </td></tr>
 <tr><td>    TTh 11; TTh 11‐12.30; TTh 11.30‐1</td><td> Thursday : January 28 Forenoon </td></tr>
-<tr><td>    TTh 3; TTh 2.30‐4; TTh 3‐4.30; TTh 8‐30‐10 </td><td>Thursday : January 28 Afternoon </td></tr>
+<tr><td>    TTh 3; TTh 2.30‐4; TTh 3‐4.30; TTh 8.30‐10 </td><td>Thursday : January 28 Afternoon </td></tr>
 <tr><td>    TTh 10; TTh 10‐11.30; TTh 10.30‐12</td><td> Friday : January 29 Forenoon </td></tr>
 <tr><td>    TTh 4; TTh 3.30‐5, MWF 8.30‐10</td><td> Friday : January 29 Afternoon </td></tr>
 </table>
